--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@clerk/clerk-expo": "^0.20.6",
     "@expo/vector-icons": "^13.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/native": "^6.0.2",
@@ -32,12 +35,14 @@
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
+    "fortawesome": "^0.0.1-security",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "^15.0.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6"
   },
