--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
     "fortawesome": "^0.0.1-security",
+    "graphql-request": "^6.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
